## 2020-4-28
• Added Error, Success, and Results section on automation.html
• Edited automation.css

## 2020-4-20
• Added automation.html, automation.css, and default drop zone css

## 2020-4-7
• Updated navigation menus and changes on index.html

## 2020-4-6
• Updated navigation menus and removed past visits
• Updated new dashboard (index.html)
• Added reports.dataaudit.css and updated app.css and view-policy-report.css

## 2018-8-3
• Updated ../index.html, app.css, and app.bootstrap.css

## 2018-7-13
• Updated menu links

## 2018-7-12
• Added reports section 
• Updated dashboard and view user access.html

## 2017-3-22
• Changed breadcrumbs to tabs on dashboard
• Changed Home to Dashboard
• Updated stylesheets
• Added department tab
• Removed pages that are no longer needed
• Added fictitious info

## 2017-3-17
• Updated css to add styling to filter and submit buttons

## 2017-3-7
• Updated branch map to reflect latest changes
• Bar chart has been removed and replaced with number of visits

## 2017-2-13
• Added filters for date search
• Added new navigation menus on submissions.html
• Updated dashboard