@@ -360,6 +360,32 @@
 
                             <button id="save" name="save" class="btn-sm btn-primary"> Download the template</button>
 
+                            <!--Display if an error occurs-->
+                            <div class="row spacer20">
+                                <div class="col-xs-12 col-md-12 col-lg-12 alert-danger">
+                                    <div class="import-title"><i class="fa fa-exclamation-triangle"></i> Error</div>
+                                        <p>Error message goes here with an explanation of the error and how to fix the error. Error can span across the entire page if needed.
+                                            <button id="save" name="save" class="btn-sm btn-danger"> Export to Excel</button>
+                                        <p>
+                                </div>
+                            </div>
+
+                            <!--Display if import was a success-->
+                            <div class="row spacer20">
+                                <div class="col-xs-12 col-md-12 col-lg-12 alert-success">
+                                    <div class="import-title"><i class="fa fa-check-circle"></i> Success</div>
+                                        <p>Your import has been successfully processed.<p>
+                                </div>
+                            </div> 
+
+                            <!--Display Results-->
+                            <div class="row spacer20">
+                                <div class="col-xs-12 col-md-12 col-lg-12 alert-info">
+                                    <div class="import-title"><i class="fa fa-list-alt"></i> Results</div>
+                                        <p>Results of import file if needed to be displayed.<p>
+                                </div>
+                            </div>   
+
                             <hr />
 
                             <div class="buttons-footer">
@@ -384,6 +410,32 @@
                                         </form>
                                 </div>
                             </div>
+
+                            <!--Display if an error occurs-->
+                            <div class="row spacer20">
+                                <div class="col-xs-12 col-md-12 col-lg-12 alert-danger">
+                                    <div class="import-title"><i class="fa fa-exclamation-triangle"></i> Error</div>
+                                        <p>Error message goes here with an explanation of the error and how to fix the error. Error can span across the entire page if needed.
+                                            <button id="save" name="save" class="btn-sm btn-danger"> Export to Excel</button>
+                                        <p>
+                                </div>
+                            </div>
+
+                            <!--Display if import was a success-->
+                            <div class="row spacer20">
+                                <div class="col-xs-12 col-md-12 col-lg-12 alert-success">
+                                    <div class="import-title"><i class="fa fa-check-circle"></i> Success</div>
+                                        <p>Your import has been successfully processed.<p>
+                                </div>
+                            </div> 
+
+                            <!--Display Results-->
+                            <div class="row spacer20">
+                                <div class="col-xs-12 col-md-12 col-lg-12 alert-info">
+                                    <div class="import-title"><i class="fa fa-list-alt"></i> Results</div>
+                                        <p>Results of import file if needed to be displayed.<p>
+                                </div>
+                            </div>   
 
                             <hr />
 
